<resources>
    <string name="app_name">Tinfoil-SMS</string>
    <string name="vibration_default_length">500</string>
    <string name="contact_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="tell_me_more">Tell Me More</string>
    <string name="save">Save</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="key_exchange_failed_to_decrypt">FAILED TO DECRYPT</string>
    <string name="possible_man_in_the_middle_attack_warning">Possible Man In The Middle Attack</string>
    <string name="key_exchange_received">Key Exchange Received</string>
    <string name="add_contacts_list">Add Contact</string>
    <string name="import_contacts_list">Import Contact</string>
    <string name="eula_title">Tinfoil-SMS EULA</string>
    <string name="eula_message">"PLEASE READ THE TERMS AND CONDITIONS OF THIS END USER LICENSE AGREEMENT (EULA) CAREFULLY BEFORE INSTALLING OR USING THIS SOFTWARE.\n
This distribution includes cryptographic software. The country in which you currently reside may have restrictions on the import, possession, use, and/or re-export to another country, of encryption software. BEFORE using any encryption software, please check your country's laws, regulations and policies concerning the import, possession, or use, and re-export of encryption software, to see if this is permitted. See http://www.wassenaar.org for more information.\n
BY CLICKING ACCEPT YOU ACKNOWLEDGE THAT YOU UNDERSTAND THE CRYPTOGRAPHIC IMPORT/EXPORT LAWS OF YOUR COUNTRY AND ARE FULLY RESPONSIBLE FOR ENSURING THAT YOU ARE LEGALLY PERMITTED TO IMPORT/EXPORT THIS SOFTWARE. BY CLICKING ACCEPT YOU AGREE THAT YOU MAY NOT HOLD THE AUTHORS LIABLE FOR ANY LEGAL RAMIFICATIONS AS A RESULT OF THIS SOFTWARE, NOR MAY THE AUTHORS BE LIABLE TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THIS SOFTWARE.\n
LASTLY, THIS SOFTWARE IS OPEN SOURCE AND IS LICENSED UNDER THE GNU GENERAL PUBLIC LICENSE V3 (GPLv3). BY CLICKING ACCEPT YOU MUST ALSO AGREE TO THE TERMS OF THE GNU GENERAL PUBLIC LICENSE V3, PLEASE SEE http://www.gnu.org/licenses/gpl.html FOR THE COMPLETE LICENSE. FURTHERMORE, DUE TO THE OPEN SOURCE NATURE OF THIS SOFTWARE, WHEN YOU IMPORT THIS SOFTWARE OR SOURCE CODE TO YOUR COUNTRY, REDISTRIBUTE IT FROM THERE OR EVEN JUST EMAIL TECHNICAL SUGGESTIONS OR SOURCE PATCHES TO THE AUTHORS YOU ARE STRONGLY ADVISED TO PAY CLOSE ATTENTION TO ANY IMPORT/EXPORT AND/OR USE LAWS WHICH MAY APPLY TO YOU.\n
ONLY CLICK ACCEPT IF YOU FULLY UNDERSTAND AND AGREE TO THE TERMS OF THIS END USER LICENSE AGREEMENT (EULA)."</string>
    <string name="compose_menu">Compose</string>
    <string name="settings_menu">Settings</string>
    <string name="pending_key_exchange_menu">Pending Key Exchanges</string>
    <string name="pending_key_exchange_menu_condensed">Exchange</string>
    <string name="kitkat_dialog_title">Warning!</string>
    <string name="kitkat_dialog_message">Tinfoil-SMS currently does not support Android KitKat 4.4 and will not be able to send any text messages. Continue anyways?</string>
    <string name="beta_notice_title">BETA Notice</string>
    <string name="beta_notice_message">This is a BETA release, your feedback and support is greatly appreciated! We are looking for people to help with translations and testing, if you are interested visit http://tinfoilhat.github.io/tinfoil-sms or contact us at tinfoil.sms@gmail.com.\nYou can also contact us anytime from the feedback section of the application settings.</string>
    <string name="duplicate_key_exchange">has sent another key exchange message</string>
    <string name="duplicate_key_exchange_warning_1">Warning: A message received has been identified as a different key exchange than the one previously received from</string>
    <string name="duplicate_key_exchange_warning_2">This is a potential man-in-the-middle attack.</string>
    <string name="user">Me</string>
    <string-array name="phone_types">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Work Fax</item>
        <item>Home Fax</item>
        <item>Pager</item>
        <item>Other</item>
        <item>Custom</item>
        <item>Callback</item>
        <item>Car</item>
        <item>Company Main</item>
        <item>ISDN</item>
        <item>Main</item>
        <item>Other Fax</item>
        <item>Telex</item>
        <item>TTY TTD</item>
        <item>Work Mobile</item>
        <item>Work Pager</item>
        <item>Assistant</item>
        <item>MMS</item>
    </string-array>
    <string name="key_exchange_manager">Key Exchange Manager</string>
    <string name="empty_key_exchange_list">No Pending Key Exchanges</string>
    <string name="key_exchange_error_title">Key Exchange Warning!</string>
    <string name="key_exchange_error_message_1">The Key Exchange with</string>
    <string name="key_exchange_error_message_2">was unsuccessful. This is a potential man-in-the-middle attack.\nPlease ensure your shared secrets are correct.</string>
    <string name="key_exchange_info_url">https://github.com/tinfoilhat/tinfoil-sms/wiki/Tinfoil-SMS-Introductory-Walkthrough#receiving-key-exchanges</string>
    <string name="invalid_secrets">Invalid shared secrets, must be different and at least 8 characters!</string>
    <string name="shared_secret_hint_1">Shared Secret 1</string>
    <string name="shared_secret_hint_2">Shared Secret 2</string>
    <string name="set_shared_secrets">Set the shared secret for</string>
    <string name="set_shared_secrets_title">Key Exchange</string>
    <string name="select_all_menu_condensed">All</string>
    <string name="remove_all_menu">Remove All</string>
    <string name="remove_all_menu_condensed">Remove</string>
    <string name="settings">Settings</string>
    <string name="reject_button">Reject</string>
    <string name="user_key_settings">User Key Settings</string>
    <string name="exchange_button">Exchange</string>
    <string name="add_contact_activity">Edit Contact</string>
    <string name="number">Number</string>
    <string name="add_number">Add Number</string>
    <string name="phone_type_title">Phone Type:</string>
    <string name="insufficent_message">Insufficient information provided</string>
    <string name="delete_contact_menu">Delete Contact</string>
    <string name="delete_contact_menu_condensed">Delete</string>
    <string name="exchange_keys">Exchange Keys</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="untrust_button_name">Untrust</string>
    <string name="empty_list_value">Empty List</string>
    <string name="empty_loader_value">No Contacts</string>
    <string name="empty_loader_trusted_value">No Trusted Contacts</string>
    <string name="loading_dialog_header">Load Contacts</string>
    <string name="loading_dialog_body">Loading Contacts&#8230;</string>
    <string name="shared_secret_1">Secret Message</string>
    <string name="shared_secret_2">Secret Message</string>
    <string name="book_path_text">Book Path</string>
    <string name="book_path">default</string>
    <string name="book_inverse_text">Book Inverse Path</string>
    <string name="book_inverse">default</string>
    <string name="contact_public_key">Contact\'s Public Key</string>
    <string name="public_key">Public Key</string>
    <string name="key_exchange_settings">Key Exchange Settings</string>
    <string name="auto_key_exchange">Automatically Exchange</string>
    <string name="manual_key_exchange">Manual Exchange</string>
    <string name="ignore_key_exchange">Ignore All Exchanges</string>
    <string name="edit_number">Edit Number</string>
    <string name="import_contact_key_menu">Import Contact Key</string>
    <string name="import_contact_key_menu_condensed">Import Key</string>
    <string name="delete_number_menu">Delete Number</string>
    <string name="delete_number_menu_condensed">Delete</string>
    <string name="phone_text">Phone Number</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="searching_title">Searching</string>
    <string name="searching_message">Locating Contacts&#8230;</string>
    <string name="importing_title">Importing</string>
    <string name="importing_message">Saving Contacts&#8230;</string>
    <string name="empty_import_list">No Contacts to Import</string>
    <string name="select_all_menu">Select All</string>
    <string name="deselect_all_menu">Deselect All</string>
    <string name="message">Messages</string>
    <string name="forward_title">Input Contact Number</string>
    <string name="invalid_number_message">Invalid Number</string>
    <string name="untrust_contact_menu_full">Untrust Contact</string>
    <string name="untrust_contact_menu_short">Untrust</string>
    <string name="resolve_key_exchange_full">Resolve Key Exchange</string>
    <string name="resolve_key_exchange_short">Resolve</string>
    <string name="exchange_key_full">Exchange Keys</string>
    <string name="exchange_key_short">Exchange Keys</string>
    <string-array name="sms_options">
        <item>Delete Message</item>
        <item>Copy Message</item>
        <item>Forward Message</item>
    </string-array>
    <string name="key_exchange_dialog_message">Would you like to exchange keys with</string>
    <string name="shared_secret">Shared secrets must be longer than</string>
    <string name="export_number_title">Input Contact\'s Number</string>
    <string name="key_exchange_import">Key Exchange Import</string>
    <string name="key_exchange_respond">Would you like to export or send via SMS the key exchange for</string>
    <string name="sms_option">SMS</string>
    <string name="export_option">Export</string>
    <string name="delete_thread_menu">Delete Thread</string>
    <string name="exchange_keys_menu">Exchange Keys</string>
    <string name="edit_contact_menu">Edit Contact</string>
    <string name="send">Send</string>
    <string name="send_hint">Send a message</string>
    <string name="to">To</string>
    <string name="send_message">New message</string>
    <string name="insufficent_information_provided">You have failed to provide sufficient information</string>
    <string name="delete_contacts">Delete Contacts</string>
    <string name="encrypted_message_sent">Encrypted Message Sent</string>
    <string name="message_sent">Message Sent</string>
    <string name="failed_to_encrypt">FAILED TO ENCRYPT</string>
    <string name="failed_to_sent">FAILED TO SEND</string>
    <string name="contacts_tab">Contacts</string>
    <string name="trusted_contact_tab">Trusted Contacts</string>
    <string name="pending_key_exchange_tab">Pending Key Exchanges</string>
    <string name="user_public_key">Your Public Key:</string>
    <string name="export_public_key">Export Public Key</string>
    <string name="import_contacts_title">Input Contact\'s Number</string>
    <string name="written_path">Written to your SD card under</string>
    <string name="unsuccessful_key_exchanges">Not all numbers could be exchanged, they must have shared secrets</string>
    <string name="key_exchange_cancelled">Key Exchange Cancelled</string>
    <string name="key_exchange_double_message">initiated a key exchange after you initiated one. This is a potential man-in-the-middle attack. Would you like to exchange keys anyways?</string>
    <string name="key_exchange_double_title">Key Exchange Warning!</string>
    <string name="pref_enable_bugsense">Enable Bugsense</string>
    <string name="pref_bugsense_enabled">Disable Bug Reporting</string>
    <string name="pref_bugsense_disabled">Enable Bug Reporting</string>
    <string name="title_activity_tab_selection">Manage Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_donations">Donate</string>
    <string name="new_key_exchange_menu">New Key Exchange</string>
</resources>